# twagent

./: .gitignore  BULK_FOLLOW_README.md  MIGRATION_GUIDE.md  PERSONA_TWEET_README.md  README.md  TWIKIT_FOLLOWER_README.md  X_FOLLOWER_AUTOMATION.md  accounts_to_follow.json  accounts_to_follow.txt  config.json  cookies.example.json  follow_example.py  persona_tweet_example.py  saved_tweets.json  target_accounts.json  test.py  twikit_follow_workflow.py  x_follower_example.py
AgentA/: agent_a.py
Agents/: agents.py
agents/: .gitignore  README.md  pyproject.toml  report.md  saved_tweets.json  tweet_creator_flow.html
agents/output/: complete_guide.md  guide_outline.json  selected_tweet_reply.json
agents/src/guide_creator_flow/: main.py  main_content_crew.py
agents/src/guide_creator_flow/crews/tweet_generator_crew/: content_crew.py
agents/src/guide_creator_flow/crews/tweet_generator_crew/config/: agents.yaml  tasks.yaml
agents/src/twitterspacesai/: crew.py  main.py
agents/src/twitterspacesai/tools/: custom_tool.py
browser-use/: .gitignore  FOLLOWER_AUTOMATION_README.md  TWITTER_API_README.md  account_workflow.py  bulk_follow_workflow.py  get_data.py  posted_tweets.json  reply-draft_workflow.py  reply_draft_workflow.py  saved_tweets.json  setup-new-account_workflow.py  setup_new_account_workflow.py  test.py  tweet-finder_workflow.py  twitter_api.py  twitter_api_example.py  twitter_follower_automation.py  workflow.py  x_follower_automation.py
data/: 000_about_me.json  001_saved_tweets.json  002_generated_tweets.json  003_posted_tweets.json  004_users.json  (+6 more)
(+66 files in other folders)
