[project]
name = "twitterspacesai"
version = "0.1.0"
description = "TwitterSpacesAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
twitterspacesai = "twitterspacesai.main:run"
run_crew = "twitterspacesai.main:run"
train = "twitterspacesai.main:train"
replay = "twitterspacesai.main:replay"
test = "twitterspacesai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
